[package]
name          = "mews"
version       = "0.3.0"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/mews"
homepage      = "https://crates.io/crates/mews"
repository    = "https://github.com/ohkami-rs/mews"
readme        = "README.md"
license       = "MIT"
description   = "Minimal and Efficient, Multi-Environment WebSocket implementation for async Rust"
keywords      = ["websocket", "io", "web", "async"]
categories    = ["web-programming::websocket", "network-programming", "asynchronous"]

[package.metadata.docs.rs]
features = ["rt_tokio"]

[dependencies]
tokio     = { optional = true, version = "1", features = ["net", "io-util", "sync", "time"] }
smol      = { optional = true, version = "2"   }
glommio   = { optional = true, version = "0.9" }

futures-util = { version = "0.3", default-features = false, features = ["io"] }

sha1   = { version = "0.10", default-features = false }
base64 = { version = "0.22" }

[features]
### runtimes ###
rt_tokio   = ["__runtime__", "dep:tokio", "futures-util/unstable","futures-util/bilock"]
rt_smol    = ["__runtime__", "dep:smol"]
rt_glommio = ["__runtime__", "dep:glommio"]

### optimizations ###
tcpstream-only = []

### internal ###
__runtime__  = []

#####################################
DEBUG = ["tokio?/rt"] ###############
## default = ["rt_tokio", "DEBUG"] ##
#####################################