[package]
name          = "mews"
version       = "0.4.1"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/mews"
homepage      = "https://crates.io/crates/mews"
repository    = "https://github.com/ohkami-rs/mews"
readme        = "README.md"
license       = "MIT"
description   = "Minimal and Efficient, Multi-Environment WebSocket implementation for async Rust"
keywords      = ["websocket", "io", "web", "async"]
categories    = ["web-programming::websocket", "network-programming", "asynchronous"]

[package.metadata.docs.rs]
features = ["rt_tokio"]

[dependencies]
tokio   = { optional = true, version = "1"   }
smol    = { optional = true, version = "2"   }
glommio = { optional = true, version = "0.9" }
nio     = { optional = true, version = "0.0" }

futures-util = { version = "0.3", default-features = false }

sha1   = { version = "0.10", default-features = false }
base64 = { version = "0.22" }

[features]
### runtimes ###
rt_tokio = [
    "__runtime__", "__io_tokio__",
    "dep:tokio","tokio/net","tokio/sync","tokio/time",
]
rt_smol = [
    "__runtime__", "__io_futures__",
    "dep:smol"
]
rt_glommio = [
    "__runtime__", "__io_futures__",
    "dep:glommio"
]
rt_nio = [
    "__runtime__", "__io_tokio__",
    "dep:nio",
    "dep:tokio","tokio/sync"
]

### optimizations ###
tcpstream-only = []

### internal ###
__runtime__    = []
__io_tokio__   = ["dep:tokio","tokio/io-util", "futures-util/alloc","futures-util/unstable","futures-util/bilock"]
__io_futures__ = ["futures-util/io"]

#####################################
DEBUG = ["tokio?/rt"] ###############
## default = ["rt_tokio", "DEBUG"] ##
#####################################