[package]
name          = "mews"
version       = "0.5.2"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/mews"
homepage      = "https://crates.io/crates/mews"
repository    = "https://github.com/ohkami-rs/mews"
readme        = "README.md"
license       = "MIT"
description   = "Minimal and Efficient, Multi-Environment WebSocket implementation for async Rust"
keywords      = ["websocket", "io", "web", "async"]
categories    = ["web-programming::websocket", "network-programming", "asynchronous"]

[package.metadata.docs.rs]
features = ["io_tokio"]

[dependencies]
# IO interfaces / utilities
tokio        = { optional = true, version = "1" }
futures-util = { optional = true, version = "0.3", default-features = false }

# crypto / encoding
sha1   = { version = "0.10", default-features = false }
base64 = { version = "0.22" }

[features]
io_tokio   = ["__io__",
    "dep:tokio","tokio/io-util",
    "dep:futures-util","futures-util/alloc","futures-util/unstable","futures-util/bilock" # for `BiLock` for `split` impl
]
io_futures = ["__io__",
    "dep:futures-util", "futures-util/io"
]

### internal ###
__io__ = [
    "dep:tokio","tokio/sync" # for `RwLock` for `Connection`'s close handling
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
